// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Switch /> > colors > color "primary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: calc(var(--pv-size-base) * 7);
  height: calc(var(--pv-size-base) * 4);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--pv-color-gray-6);
}

.emotion-1:checked {
  background-color: var(--pv-color-primary);
}

.emotion-1:checked+[aria-hidden] {
  -webkit-transform: translateX(calc(50% - 2px));
  -moz-transform: translateX(calc(50% - 2px));
  -ms-transform: translateX(calc(50% - 2px));
  transform: translateX(calc(50% - 2px));
}

.emotion-1:checked+[aria-hidden]:before {
  background-color: var(--pv-color-primary-shade-2);
}

.emotion-1:disabled {
  cursor: not-allowed;
  pointer-events: none;
  background-color: var(--pv-color-gray-4);
}

.emotion-1:disabled+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
  background-color: var(--pv-color-gray-1);
}

.emotion-1:disabled:checked {
  background-color: var(--pv-color-primary-tint-3);
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled)+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
}

.emotion-1:not(:disabled):hover+[aria-hidden]:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible+[aria-hidden]:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active+[aria-hidden]:before {
  opacity: 0.3;
}

.emotion-2 {
  background: var(--pv-color-primary-contrast);
  border-style: solid;
  border-radius: 100px;
  border-width: 1px;
  display: block;
  position: absolute;
  width: calc(var(--pv-size-base) * 3);
  height: calc(var(--pv-size-base) * 3);
  -webkit-transition: -webkit-transform 200ms;
  transition: transform 200ms;
  box-shadow: var(--pv-shadow-light-low);
  -webkit-transform: translateX(calc(-50% + 2px));
  -moz-transform: translateX(calc(-50% + 2px));
  -ms-transform: translateX(calc(-50% + 2px));
  transform: translateX(calc(-50% + 2px));
  pointer-events: none;
  box-sizing: content-box;
}

.emotion-2:before {
  top: -10px;
  left: -10px;
  right: -10px;
  bottom: -10px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: var(--pv-color-gray-9);
  -webkit-transition: opacity 200ms,background-color 200ms;
  transition: opacity 200ms,background-color 200ms;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      id="test-id"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
    />
  </label>
</DocumentFragment>
`;

exports[`<Switch /> > colors > color "secondary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: calc(var(--pv-size-base) * 7);
  height: calc(var(--pv-size-base) * 4);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--pv-color-gray-6);
}

.emotion-1:checked {
  background-color: var(--pv-color-secondary);
}

.emotion-1:checked+[aria-hidden] {
  -webkit-transform: translateX(calc(50% - 2px));
  -moz-transform: translateX(calc(50% - 2px));
  -ms-transform: translateX(calc(50% - 2px));
  transform: translateX(calc(50% - 2px));
}

.emotion-1:checked+[aria-hidden]:before {
  background-color: var(--pv-color-secondary-shade-2);
}

.emotion-1:disabled {
  cursor: not-allowed;
  pointer-events: none;
  background-color: var(--pv-color-gray-4);
}

.emotion-1:disabled+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
  background-color: var(--pv-color-gray-1);
}

.emotion-1:disabled:checked {
  background-color: var(--pv-color-secondary-tint-3);
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled)+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
}

.emotion-1:not(:disabled):hover+[aria-hidden]:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible+[aria-hidden]:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active+[aria-hidden]:before {
  opacity: 0.3;
}

.emotion-2 {
  background: var(--pv-color-secondary-contrast);
  border-style: solid;
  border-radius: 100px;
  border-width: 1px;
  display: block;
  position: absolute;
  width: calc(var(--pv-size-base) * 3);
  height: calc(var(--pv-size-base) * 3);
  -webkit-transition: -webkit-transform 200ms;
  transition: transform 200ms;
  box-shadow: var(--pv-shadow-light-low);
  -webkit-transform: translateX(calc(-50% + 2px));
  -moz-transform: translateX(calc(-50% + 2px));
  -ms-transform: translateX(calc(-50% + 2px));
  transform: translateX(calc(-50% + 2px));
  pointer-events: none;
  box-sizing: content-box;
}

.emotion-2:before {
  top: -10px;
  left: -10px;
  right: -10px;
  bottom: -10px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: var(--pv-color-gray-9);
  -webkit-transition: opacity 200ms,background-color 200ms;
  transition: opacity 200ms,background-color 200ms;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      id="test-id"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
    />
  </label>
</DocumentFragment>
`;

exports[`<Switch /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: calc(var(--pv-size-base) * 7);
  height: calc(var(--pv-size-base) * 4);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--pv-color-gray-6);
}

.emotion-1:checked {
  background-color: var(--pv-color-primary);
}

.emotion-1:checked+[aria-hidden] {
  -webkit-transform: translateX(calc(50% - 2px));
  -moz-transform: translateX(calc(50% - 2px));
  -ms-transform: translateX(calc(50% - 2px));
  transform: translateX(calc(50% - 2px));
}

.emotion-1:checked+[aria-hidden]:before {
  background-color: var(--pv-color-primary-shade-2);
}

.emotion-1:disabled {
  cursor: not-allowed;
  pointer-events: none;
  background-color: var(--pv-color-gray-4);
}

.emotion-1:disabled+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
  background-color: var(--pv-color-gray-1);
}

.emotion-1:disabled:checked {
  background-color: var(--pv-color-primary-tint-3);
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled)+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
}

.emotion-1:not(:disabled):hover+[aria-hidden]:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible+[aria-hidden]:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active+[aria-hidden]:before {
  opacity: 0.3;
}

.emotion-2 {
  background: var(--pv-color-primary-contrast);
  border-style: solid;
  border-radius: 100px;
  border-width: 1px;
  display: block;
  position: absolute;
  width: calc(var(--pv-size-base) * 3);
  height: calc(var(--pv-size-base) * 3);
  -webkit-transition: -webkit-transform 200ms;
  transition: transform 200ms;
  box-shadow: var(--pv-shadow-light-low);
  -webkit-transform: translateX(calc(-50% + 2px));
  -moz-transform: translateX(calc(-50% + 2px));
  -ms-transform: translateX(calc(-50% + 2px));
  transform: translateX(calc(-50% + 2px));
  pointer-events: none;
  box-sizing: content-box;
}

.emotion-2:before {
  top: -10px;
  left: -10px;
  right: -10px;
  bottom: -10px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: var(--pv-color-gray-9);
  -webkit-transition: opacity 200ms,background-color 200ms;
  transition: opacity 200ms,background-color 200ms;
}

<label
    class="my-class-name emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      id="test-id"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
    />
  </label>
</DocumentFragment>
`;

exports[`<Switch /> > should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: calc(var(--pv-size-base) * 7);
  height: calc(var(--pv-size-base) * 4);
  border-radius: calc(var(--pv-size-base) * 4);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--pv-color-gray-6);
}

.emotion-1:checked {
  background-color: var(--pv-color-primary);
}

.emotion-1:checked+[aria-hidden] {
  -webkit-transform: translateX(calc(50% - 2px));
  -moz-transform: translateX(calc(50% - 2px));
  -ms-transform: translateX(calc(50% - 2px));
  transform: translateX(calc(50% - 2px));
}

.emotion-1:checked+[aria-hidden]:before {
  background-color: var(--pv-color-primary-shade-2);
}

.emotion-1:disabled {
  cursor: not-allowed;
  pointer-events: none;
  background-color: var(--pv-color-gray-4);
}

.emotion-1:disabled+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
  background-color: var(--pv-color-gray-1);
}

.emotion-1:disabled:checked {
  background-color: var(--pv-color-primary-tint-3);
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled)+[aria-hidden] {
  border-color: var(--pv-color-gray-3);
}

.emotion-1:not(:disabled):hover+[aria-hidden]:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible+[aria-hidden]:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active+[aria-hidden]:before {
  opacity: 0.3;
}

.emotion-2 {
  background: var(--pv-color-primary-contrast);
  border-style: solid;
  border-radius: 100px;
  border-width: 1px;
  display: block;
  position: absolute;
  width: calc(var(--pv-size-base) * 3);
  height: calc(var(--pv-size-base) * 3);
  -webkit-transition: -webkit-transform 200ms;
  transition: transform 200ms;
  box-shadow: var(--pv-shadow-light-low);
  -webkit-transform: translateX(calc(-50% + 2px));
  -moz-transform: translateX(calc(-50% + 2px));
  -ms-transform: translateX(calc(-50% + 2px));
  transform: translateX(calc(-50% + 2px));
  pointer-events: none;
  box-sizing: content-box;
}

.emotion-2:before {
  top: -10px;
  left: -10px;
  right: -10px;
  bottom: -10px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: var(--pv-color-gray-9);
  -webkit-transition: opacity 200ms,background-color 200ms;
  transition: opacity 200ms,background-color 200ms;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      id="test-id"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
    />
  </label>
</DocumentFragment>
`;
